FileEntry: rafactored